--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -131,11 +131,23 @@
                             showConfirmButton: false
                         });
                     } else if (error.request) {
-                    // The request was made but no response was received
-                    alert.textContent = 'Please check your network connection.';
+                    //if a request was made but no response was received
+                        Swal.fire({
+                            title: 'Registration Failed!',
+                            text: 'Please check your network connection.',
+                            icon: 'error',
+                            timer: 4000,
+                            showConfirmButton: false
+                        });
                     } else {
                     // Something happened in setting up the request that triggered an Error
-                    alert.textContent = 'An error occurred while setting up the request: ' + error.message;
+                        Swal.fire({
+                            title: 'Registration Failed!',
+                            text: 'An error occurred while setting up the request: ' + error.message,
+                            icon: 'error',
+                            timer: 4000,
+                            showConfirmButton: false
+                        });
                     }
                 });
                 event.preventDefault();
