--- a/App/static/postpag444.css
+++ b/App/static/postpag444.css
@@ -482,3 +482,10 @@ button:hover {
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 7px;
 }
+
+.custom-swal{
+    border-radius: 0px;
+    border: none;
+    width: 80px;
+    height: 0px;
+}
