--- a/App/static/styles098.css
+++ b/App/static/styles098.css
@@ -668,6 +668,8 @@ body.nav-active { overflow: hidden; }
   height: 32px;
   display: grid;
   place-items: center;
+  align-content: center;
+  justify-self: center;
   background: var(--bg-prussian-blue);
   border-radius: var(--radius-circle);
   color: var(--white);
@@ -1985,3 +1987,37 @@ li .recent-post-card{
   flex-direction: row;
   align-items: center;
 }
+
+.development{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  width: 100%;
+  /* color: rgb(255, 255, 255); */
+  /* background-color: #0bd1d1;  */
+  /* width: fit-content; */
+}
+
+.development p {
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  background-color: rgba(46, 163, 209, 0.245);
+  padding-right: 8px;
+  padding-left: 8px;
+  border-radius: 10px;
+  width: fit-content;
+  white-space: nowrap;
+  border: 1px solid rgb(211, 198, 188);
+  animation: scrollRightToLeft 13s linear infinite;
+}
+
+@keyframes scrollRightToLeft {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
