--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -37,9 +37,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'styles745.css'%}">
+  <link rel="stylesheet" href="{% static 'styles098.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
-  <link rel="stylesheet" href="{% static 'postpag132.css'%}">
+  <link rel="stylesheet" href="{% static 'postpag444.css'%}">
   <link rel="stylesheet" href="{% static 'staticlogin606.css'%}">
 
   <!-- 
@@ -58,6 +58,9 @@
   -->
   {% block nav %}
   <header class="header" data-header>
+    <div class="development">
+      <p>Exciting developments are in progress. Stay tuned for updates!</p>
+    </div>
     <div class="container">
 
       <a href="{% url 'home' %}" class="logo">
@@ -132,11 +135,11 @@
 
             {% if user_subscribed  %}
             <li>
-              <a href="#" class="navbar-bottom-link hover-1">Unsubscribe</a>
+              <a id="userunsubscribed" onclick="suboptions('Unsubscribe')" class="navbar-bottom-link hover-1">Unsubscribe</a>
             </li>
             {% else %}
             <li>
-              <a href="#" class="navbar-bottom-link hover-1">Subscribe</a>
+              <a id="usersubscribed" onclick="suboptions('Subscribe')" class="navbar-bottom-link hover-1">Subscribe</a>
             </li>
             {% endif %}
             <li>
@@ -205,7 +208,7 @@
             {% comment %} {% endif %} {% endcomment %}
 
             <h1 class="headline headline-1 section-title">
-              Dive into <span class="span">Tech Scape</span>
+              Dive into latest <span class="span">TS</span> trends
             </h1>
 
             <p class="hero-text">
@@ -871,8 +874,10 @@
     - custom js link
   -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="{% static 'scriptHome.js'%}"></script>
-  <script src="{% static 'scriptUser98.js'%}"></script>
+  <script src="{% static 'scriptUser12.js'%}"></script>
+  
   <script>
     window.userData = {
       username: "{{ user.id }}",
