completely update all newsletter option

--- a/App/static/styles464.css
+++ b/App/static/styles464.css
@@ -177,6 +177,7 @@ body {
   font-size: 1.6rem;
   line-height: var(--lineHeight-4);
   overflow-y: overlay;
+  transition: opacity 6s ease-in-out;
 }
 
 body.nav-active { overflow: hidden; }
