--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -37,10 +37,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'styles464.css'%}">
+  <link rel="stylesheet" href="{% static 'styles465.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
-  <link rel="stylesheet" href="{% static 'postpag444.css'%}">
-  <link rel="stylesheet" href="{% static 'staticlogin606.css'%}">
+  <link rel="stylesheet" href="{% static 'postpag551.css'%}">
+  <link rel="stylesheet" href="{% static 'staticlogin22.css'%}">
 
   <!-- 
     - preload images
@@ -805,7 +805,7 @@
               {% if user_subscribed %}
               <a class="btn btn-primary">
                 <button type="submit">
-                  <span class="span" onclick="suboptions('Unsubscribe')">Unubscribe</span>
+                  <span class="span" onclick="suboptions('Unsubscribe')">Unsubscribe</span>
                 </button>
 
                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
