--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -39,7 +39,8 @@
 
   <link rel="stylesheet" href="{% static 'styles465.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
-  <link rel="stylesheet" href="{% static 'postpag551.css'%}">
+  <link rel="stylesheet" href="{% static 'postpag78.css'%}">
+  <link rel="stylesheet" href="{% static 'styleterms11.css'%}">
   <link rel="stylesheet" href="{% static 'staticlogin22.css'%}">
 
   <!-- 
@@ -893,6 +894,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="{% static 'scriptHome.js'%}"></script>
   <script src="{% static 'scriptUser55.js'%}"></script>
+  <script src="{% static 'scripterms11.js'%}"></script>
   
   <script>
     window.userData = {
