--- a/App/static/postpag345.css
+++ b/App/static/postpag345.css
@@ -227,7 +227,6 @@
 
 
 .blog-register-body {
-    padding: 0px;
     margin-top: 100px;
     font-family: Arial, sans-serif;
     display: flex;
@@ -245,12 +244,19 @@
 
 .blog-register-container {
     /* background: #ffffff; */
+    /* padding-top: 10px; */
     padding: 2rem;
     border-radius: 15px;
     box-shadow: 0px 8px 20px rgba(105, 96, 96, 0.1);
     width: 100%;
     max-width: 400px;
     border: 1px solid rgb(255, 255, 255);
+    padding: 1rem;
+    background: linear-gradient(170deg, #081b3e, #6a8caf);
+    backdrop-filter: blur(10px);
+    /* background: rgba(255, 255, 255, 0.1); */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blog-register-title {
@@ -274,7 +280,7 @@
     color: black;
 }
 .blog-register-button {
-    background: #386aa0;
+    background: linear-gradient(135deg, #538ac1, #375674);
     color: #ffffff;
     padding: 0.8rem;
     border: none;
@@ -285,27 +291,31 @@
     margin-top: 5px;
 }
 .blog-register-button:hover {
-    background: #0056b3;
+    background: linear-gradient(135deg, #538ac1, #213548);
 }
 .blog-register-text {
-    margin-top: 10px;
+    margin-top: 8px;
     text-align: center;
-    font-size: 11px;
-    color: #848484;
+    justify-content: center;
+    align-items: center;    
+    font-size: 12px;
+    color: #decfcf;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
+
 .blog-register-text a {
-    margin-top: 4px;
+    margin-left: 5px;
+    font-size: 12px;
     color: #ffffff;
-    text-decoration: underline;
+    text-decoration:underline;
     width: fit-content;
     align-self: center;
     justify-self: center;
 }
 .blog-register-text a:hover {
-    color: rgb(27, 117, 200);
+    color: rgb(0, 0, 0);
 }
 
 .blog-register-password {
@@ -317,7 +327,7 @@
 }
 
 .blog-register-password a {
-    margin-top: 4px;
+    margin-top: 5px;
     color: #ffffff;
     text-decoration: underline;
     width: fit-content;
@@ -331,17 +341,39 @@
 
 .blog-register-alert {
     font-size: 12px;
-    color: #ed3434;
+    color: #ff0000;
     letter-spacing: 0.05em;
     display: flex;
-    /* background-color: rgb(255, 255, 255); */
+    box-shadow: 0 4px 8px rgba(44, 62, 80, 0.1);
+    /* background-color: rgba(255, 255, 255, 0.787); */
+    background: linear-gradient(135deg, #ffffff, #e6a3a3);
     flex-direction: column;
     width: fit-content;
     padding-right: 10px;
     padding-left: 10px;
-    border-radius: 10px;
+    border-radius: 6px;
     /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
     transition: all 0.3s ease-in-out;
+}
+
+.forms-section {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	/* align-items: center; */
+	width: 100%;
+}
+
+.forms-section .section-title-login {
+	font-size: 20px;
+	letter-spacing: 1px;
+	color: #fff;
+}
+
+.forms-section .log-title{
+	margin-bottom: 10px;
+    align-self: center;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .newh6{
