--- a/App/static/postpag278.css
+++ b/App/static/postpag278.css
@@ -371,6 +371,7 @@
 }
 
 .forms-section .log-title{
+    font-size: 14px;
 	margin-bottom: 10px;
     align-self: center;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
