--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -893,7 +893,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="{% static 'JavaScript/scriptHome.js'%}"></script>
-  <script src="{% static 'JavaScript/scriptUser55.js'%}"></script>
+  <script src="{% static 'JavaScript/scriptUsers.js'%}"></script>
   <script src="{% static 'JavaScript/scripterms11.js'%}"></script>
   
   <script>
