API test with postman

--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -97,7 +97,7 @@
             </div>
         
         </body>
-        <script src="{% static 'JavaScript/Register.js'%}"></script>
+        <script src="{% static 'JavaScript/Register33.js'%}"></script>
         
     </div>
 </div>
