--- a/App/templates/verify.html
+++ b/App/templates/verify.html
@@ -26,7 +26,7 @@
             Don't need to reset your password?<a href="{% url 'login' %}">Sign in</a>
         </p>
     </div>
-    <script src="{% static 'JavaScript/ResetLink.js'%}"></script>
+    <script src="{% static 'JavaScript/ResetLink1.js'%}"></script>
 </div>
 {% endblock  %}
 
