submit feature workflow

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -39,7 +39,7 @@
 
   <link rel="stylesheet" href="{% static 'CSS/styles465.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/related22.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/postpag278.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/postpag47.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/styleterms11.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}">
 
@@ -890,12 +890,12 @@
   <!-- 
     - custom js link
   -->
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="{% static 'JavaScript/scriptHome.js'%}"></script>
-  <script src="{% static 'JavaScript/scriptUsers.js'%}"></script>
+  <script src="{% static 'JavaScript/scriptUsers919.js'%}"></script>
   <script src="{% static 'JavaScript/scripterms11.js'%}"></script>
-  
   <script>
     window.userData = {
       username: "{{ user.id }}",
