--- a/App/static/CSS/postpag47.css
+++ b/App/static/CSS/postpag47.css
@@ -293,6 +293,12 @@
 .blog-register-button:hover {
     background: linear-gradient(135deg, #538ac1, #213548);
 }
+
+.blog-register-button.disabled{
+    opacity: 0.4;
+    border: 1px solid rgb(216, 205, 205);
+}
+
 .blog-register-text {
     margin-top: 8px;
     text-align: center;
@@ -303,7 +309,6 @@
     display: flex;
     flex-direction: row;
 }
-
 
 .blog-register-text a {
     margin-left: 5px;
@@ -522,11 +527,11 @@ button {
     margin-left: 7px;
 }
 
-.custom-swal{
+#custom-swalalert{
     border-radius: 0px;
     border: none;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
 }
 
 .input-block-terms{
