--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -23,7 +23,10 @@
           <p class="blog-register-alert">
             
           </p>
-            <button class="blog-register-button" type="submit" >Login</button>
+            <button class="blog-register-button" type="submit" >
+              Login
+              <div class="loading"><span>.</span><span>.</span><span>.</span></div>
+            </button>
       </form>
       {% comment %} <p class="blog-register-password">
         <a href="{% url 'verify' %}">Forgot password?</a>
