--- a/App/static/CSS/postpag16.css
+++ b/App/static/CSS/postpag16.css
@@ -289,6 +289,9 @@
     cursor: pointer;
     transition: 0.3s;
     margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .blog-register-button:hover {
     background: linear-gradient(135deg, #538ac1, #213548);
@@ -560,3 +563,38 @@ button {
 .anchor-t:hover{
 	color: #ffffffe7;
 }
+
+.loading {
+    font-size: 20px;
+    font-weight: bold;
+    height: 5px;
+    color: #3498db;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading span {
+    height: fit-content;
+    /* background-color: red; */
+    margin-bottom:5px;
+    animation: blink 1.5s infinite;
+}
+
+.loading span:nth-child(1) {
+animation-delay: 0s;
+}
+.loading span:nth-child(2) {
+animation-delay: 0.3s;
+}
+.loading span:nth-child(3) {
+animation-delay: 0.6s;
+}
+
+@keyframes blink {
+0% { opacity: 1; }
+50% { opacity: 0.3; }
+100% { opacity: 1; }
+}
+  
+
