--- a/App/static/CSS/postpag390.css
+++ b/App/static/CSS/postpag390.css
@@ -483,14 +483,14 @@ form {
     flex-direction: column;
 }
 
-input[type="text"] {
-    /* padding: 10px;
+/* input[type="text"] {
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
     font-size: 16px;
-    width: 100%; */
-}
+    width: 100%;
+} */
 
 button {
     padding: 10px;
