Loading feature updated

--- a/App/templates/passwordreset.html
+++ b/App/templates/passwordreset.html
@@ -21,12 +21,15 @@
             <p class="blog-register-alert">
                 
             </p>
-            <button class="blog-register-button" type="submit">Reset password</button>
+            <button class="blog-register-button" type="submit">
+                Reset password
+                <div class="loading"><span>.</span><span>.</span><span>.</span></div>
+            </button>
         </form>
         <p class="blog-register-text">
             Token expired? <a href="{% url 'reset-link' %}">Request a new reset link</a>
         </p>
-        <script src="{% static 'JavaScript/PasswordReset13.js'%}"></script>
+        <script src="{% static 'JavaScript/PasswordReset13.js'%}?v={{ timestamp }}"></script>
     </div>
 </div>
 {% endblock  %}
