--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -22,6 +22,11 @@
   -->
   <link rel="shortcut icon" href="Images/favicon.svg" type="image/svg+xml">
 
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
+
   <!-- 
     - google font link
   -->
