--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -37,7 +37,7 @@
       <p class="blog-register-text">
           New to Tech Scape? <a href="{% url 'register' %}">Sign up</a>
       </p>
-      <script src="{% static 'JavaScript/login64.js'%}"></script>
+      <script src="{% static 'JavaScript/login00.js'%}?v={{ timestamp }}"></script>
     </div>
 </div>
 {% endblock  %}
