User Verification setup on sign up

--- a/App/templates/passwordreset.html
+++ b/App/templates/passwordreset.html
@@ -12,7 +12,7 @@
             <h1 class="section-title-login">Reset Account Password</h1>
             <p class="log-title">Input new password</p>
         </section>
-        <form class="blog-register-form" id="registerForm1" method="POST">
+        <form class="blog-register-form" id="registerForm" method="POST">
             {% csrf_token %}
             <h6 class="newh6">Password</h6> 
             <input class="blog-register-input" type="password" name="password" placeholder="Password" autocomplete="on" required>
