--- a/App/templates/userVerify.html
+++ b/App/templates/userVerify.html
@@ -1,9 +1,10 @@
 {% load static %}
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
-  </head>
-  <link rel="stylesheet" href="{% static 'CSS/alert.css'%}">
+    <head>
+        <meta name="csrf-token" content="{{ csrf_token }}">
+        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'CSS/alert34.css'%}">
+    </head>
     <body>
         {% block main %}
         <div class="card">
